# latheControl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.txt  axis.cpp  axis.h  configreader.cpp  configreader.h  controller.cpp  controller.h  curses.cpp  curses.h  els.cfg  els.mk  gpio.cpp  gpio.h  igpio.h  isteppermotor.h  iview.h  joystick.cpp  joystick.h  keycodes.h  lc.cfg  lc_mill.cfg  lc_rt.cfg  linearscale.cpp  linearscale.h  log.cpp  log.h  m.sh  main.cpp  mockgpio.h  model.cpp  model.h  rotaryencoder.cpp  rotaryencoder.h  sfml_dialog.cpp  (+10 more)
test/: CMakeLists.txt  Makefile  catch.hpp  mockgpio.h  test.cpp
